--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding:0;
-    font-family: cursive;
+    font-family: cursive, sans-serif;
     box-sizing: border-box;
     font-size: x-large;
     
@@ -32,7 +32,7 @@ body{
     padding: 20px 0;
 }
 .quiz h2{
-    font-size: 18px;
+    font-size: 30px;
     color: #001e4d;
     font-weight: 600;
 }
@@ -81,7 +81,9 @@ body{
     background: rgb(224 21 21);
 }
 
+@media screen and (min-width: 480px) and (max-width: 960px){
 
+}
 
 
 
