--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding:0;
-    font-family: cursive, sans-serif;
+    font-family: "Playpen Sans", cursive;
     box-sizing: border-box;
     font-size: x-large;
     
@@ -16,7 +16,7 @@ body{
     background: #848afa;
     width: 90%;
     max-width: 600px;
-    margin: 100px auto 0;
+    margin: 100px auto 100px;
     border-radius: 10px;
     padding: 30px;
 }
@@ -81,9 +81,7 @@ body{
     background: rgb(224 21 21);
 }
 
-@media screen and (min-width: 480px) and (max-width: 960px){
 
-}
 
 
 
